:sparkles:(Trending: Select Language instead of Language Menu)

--- a/src/index.less
+++ b/src/index.less
@@ -2,8 +2,8 @@
 * @Author: eason
 * @Date:   2017-01-05T06:16:19+08:00
 * @Email:  uniquecolesmith@gmail.com
-* @Last modified by:   eason
-* @Last modified time: 2017-04-15T23:41:47+08:00
+ * @Last modified by:   eason
+ * @Last modified time: 2017-08-02T20:39:50+08:00
 * @License: MIT
 * @Copyright: Eason(uniquecolesmith@gmail.com)
 */
@@ -11,6 +11,12 @@
 html, body, :global(#root) {
   overflow: hidden;
   height: 100%;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 // :global {
