--- a/index.css
+++ b/index.css
@@ -1,1 +1,1 @@
-#root,body,html{overflow:hidden;height:100%}
+#root,body,html{overflow:hidden;height:100%}*{padding:0;margin:0;box-sizing:border-box}
