:sparkles:(react-router-page-transition) :sparkles:(mobile pull down) disable body scroll, fix body

--- a/src/index.less
+++ b/src/index.less
@@ -3,7 +3,7 @@
 * @Date:   2017-01-05T06:16:19+08:00
 * @Email:  uniquecolesmith@gmail.com
  * @Last modified by:   eason
- * @Last modified time: 2017-08-02T20:39:50+08:00
+ * @Last modified time: 2017-08-13T20:39:40+08:00
 * @License: MIT
 * @Copyright: Eason(uniquecolesmith@gmail.com)
 */
@@ -11,6 +11,15 @@
 html, body, :global(#root) {
   overflow: hidden;
   height: 100%;
+}
+
+body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
 }
 
 * {
